# EU-Commission-Network-Analyzis

./: .env  .gitignore  README.md  pyproject.toml  root_pointer.py
data/meetings/: 11 AG.json  11.11.11 Koepel van Internationale Solidariteit.json  2 Investing Initiative.json  21st.bio.json  360 Foodservice.json  3M.json  4evergreen.json  4iG Plc..json  5Rights Foundation.json  A Place for Rover Inc..json  A.P. Møller  Mærsk AS.json  A2A.json  AARP.json  AB Ignitis grupė.json  AB SKF.json  ABB Ltd.json  ABN AMRO Bank N.V..json  ABN AMRO Clearing Bank N.V..json  ABP Pensionfund.json  ACCIONA S.A..json  ACI Worldwide.json  ACT  The App Association.json  ACT Alliance Advocacy to the European Union.json  ACT group.json  ACTION CONTRE LA FAIM.json  ADENE  Agência para a Energia.json  ADPA  European Independent Automotive Data Publishers Association.json  ADS Insight.json  AECC.json  AEDE Association européenne des enseignants.json  AEGIS Europe.json  AES Maritza East I Services EOOD.json  AGE Platform Europe.json  AGENZIA PER LA PROMOZIONE DELLA RICERCA EUROPEA.json  AGORIA.json  AIG Europe S.A..json  AIM  European Brands Association.json  AIR LIQUIDE.json  AIRC International.json  AJC Transatlantic Institute.json  (+2884 more)
data/members/: cabinent_members_match.json  commisioners_data.json  commisioners_data_reviewed.json
data/members/commissioners_pdf_index/: index.faiss  (+1 more)
src/graphs/: experiments.ipynb
src/scrapers/: cabinet_members_match_html_scraper.py  cabinet_members_match_perplexity_html_scraper.py  commissioners_data_pdf_scraper.py  lobbyist_meetings_html_scraper.py
(+5 files in other folders)
